[gd_scene load_steps=20 format=2]

[ext_resource path="res://Enemys/Enemy2Summ.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enemies/Necromancer/projectile/necromancer-projectile-projectile-00.png" type="Texture" id=2]
[ext_resource path="res://sprites/Enemies/Necromancer/projectile/necromancer-projectile-projectile-01.png" type="Texture" id=3]
[ext_resource path="res://sprites/Enemies/Necromancer/projectile/necromancer-projectile-projectile-02.png" type="Texture" id=4]
[ext_resource path="res://sprites/Enemies/gothicvania patreon collection/ gothicvania patreon collection/demon-Files/PNG/blue0.png" type="Texture" id=5]
[ext_resource path="res://sprites/Enemies/gothicvania patreon collection/ gothicvania patreon collection/demon-Files/PNG/blue3.png" type="Texture" id=6]
[ext_resource path="res://sprites/Enemies/gothicvania patreon collection/ gothicvania patreon collection/demon-Files/PNG/blue4.png" type="Texture" id=7]
[ext_resource path="res://sprites/Ballons/46829621_498350997331686_3426990216915714048_n.png" type="Texture" id=8]
[ext_resource path="res://sprites/Ballons/47165511_2306234679447158_5048928300638928896_n.png" type="Texture" id=9]
[ext_resource path="res://sprites/Ballons/46879929_2245016042210154_4704002629603164160_n.png" type="Texture" id=10]
[ext_resource path="res://sprites/Ballons/46831497_737887039911114_385629028855316480_n.png" type="Texture" id=11]
[ext_resource path="res://sprites/Ballons/46954038_421573985046949_8849777244369846272_n.png" type="Texture" id=12]
[ext_resource path="res://sprites/Ballons/46799536_762876914045653_4633131095078993920_n.png" type="Texture" id=13]
[ext_resource path="res://sprites/Ballons/46943310_362727494534673_5379692919038935040_n.png" type="Texture" id=14]
[ext_resource path="res://sprites/Ballons/46787272_2453397444677585_9098814884304388096_n.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "summ",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4.29715, 15.0367 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "start",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "fall",
"speed": 7.0
} ]

[node name="Summ" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

rotation = 4.71239
frames = SubResource( 1 )
animation = "summ"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

position = Vector2( 0.085178, 0.0409133 )
scale = Vector2( 0.457824, 1.49556 )
rect = Rect2( -10, -10, 20, 20 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="." index="3"]

frames = SubResource( 3 )
animation = "start"
frame = 2
_sections_unfolded = [ "Visibility" ]

[node name="AnimatedSprite3" type="AnimatedSprite" parent="." index="4"]

visible = false
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 4 )
animation = "fall"
frame = 3
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_Summ_body_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="animation_finished" from="AnimatedSprite2" to="." method="_on_AnimatedSprite2_animation_finished"]

[connection signal="animation_finished" from="AnimatedSprite3" to="." method="_on_AnimatedSprite3_animation_finished"]


